generated/checkers/refine/KN-Double-Free-5aa2184e-2/build_logs/syntax-repair-refine-2-4/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1013:10: error: redefinition of ‘template<class T> const T* findSpecificTypeInParents(const clang::Stmt*, clang::ento::CheckerContext&)’
 1013 | const T* findSpecificTypeInParents(const Stmt *S, CheckerContext &C) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Checkers/utility.h:50:10: note: ‘template<class T> const T* findSpecificTypeInParents(const clang::Stmt*, clang::ento::CheckerContext&)’ previously declared here
   50 | const T* findSpecificTypeInParents(const Stmt *S, CheckerContext &C) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1033:10: error: redefinition of ‘template<class T> const T* findSpecificTypeInChildren(const clang::Stmt*)’
 1033 | const T* findSpecificTypeInChildren(const Stmt *S) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Checkers/utility.h:63:10: note: ‘template<class T> const T* findSpecificTypeInChildren(const clang::Stmt*)’ previously declared here
   63 | const T* findSpecificTypeInChildren(const Stmt *S) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
